MINIFICPP-1563 fix -Wmaybe-uninitialized warnings

Signed-off-by: Ferenc Gerlits <fgerlits@gmail.com>

This closes #1077